<resources>
    <string name="app_name">MyPurse</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="add">Add</string>
    <string name="transaction_content">Transaction Content</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="empty_list">Ooops! No transaction available</string>
    <string name="income_amt">5000</string>


    <string-array name="Transaction_type">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
</resources>